fixed z-index portfolio image problem (couldnt click navbar)

--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -64,9 +64,8 @@
 
 .project {
   height:250px;
-  background-color: gray;
-  padding: 0;
-  border:1px solid green;
+  /*background-color: gray;*/
+  padding: 40px 0 0 0;
 }
 
 .project-view {
@@ -74,7 +73,7 @@
   width: 250px;
   background-color: white;
   margin: 0 auto;
-  z-index: 10;
+  z-index: 2;
   background-size: cover;
 }
 
@@ -92,7 +91,7 @@
 
 a.portfolio-link {
   position: relative;
-  z-index: 1000;
+  z-index: 5;
   display: block;
   height: 100%;
   width: 100%;
